--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: statuscol-nvim
+Source: statuscol.nvim
 Section: editors
 Priority: optional
 Maintainer: Dimitry Ishenko <dimitry.ishenko@gmail.com>
@@ -7,14 +7,15 @@ Build-Depends:
  dh-vim-addon,
 Standards-Version: 4.6.2
 Homepage: https://github.com/luukvbaal/statuscol.nvim
-Vcs-Browser: https://github.com/dimitry-ishenko-vim/statuscol-nvim
-Vcs-Git: https://github.com/dimitry-ishenko-vim/statuscol-nvim.git
+Vcs-Browser: https://github.com/dimitry-ishenko-neovim/neovim-statuscol
+Vcs-Git: https://github.com/dimitry-ishenko-neovim/neovim-statuscol.git
 Rules-Requires-Root: no
 
-Package: statuscol-nvim
+Package: neovim-statuscol
 Architecture: all
 Depends:
  ${misc:Depends},
+ ${vim-addon:Depends},
  neovim (>= 0.10),
 Description: Status column plugin
  Status column plugin that provides a configurable 'statuscolumn' and click
